typewriter-test/tests/compile_error/missing_sync_to.rs
use typebridge::TypeWriter;

#[derive(TypeWriter)]
pub struct NoSyncTo {
    name: String,
}

fn main() {}
